--- a/railway.toml
+++ b/railway.toml
@@ -2,6 +2,6 @@
 builder = "DOCKERFILE"
 
 [deploy]
-healthcheckPath = "/"
-healthcheckTimeout = 100
+healthcheckPath = "/api/health"
+healthcheckTimeout = 180
 restartPolicyType = "ON_FAILURE"
