Atualiza configuração do Railway e script de início

--- a/railway.toml
+++ b/railway.toml
@@ -1,6 +1,8 @@
 [build]
-builder = "DOCKERFILE"
+builder = "nixpacks"
 
 [deploy]
-healthcheck = false
+healthcheck_path = "/api/health"
+healthcheck = true
 restartPolicyType = "ON_FAILURE"
+startCommand = "node server/server.js"
