Adiciona suporte a CORS e melhora o script de inicialização

--- a/railway.toml
+++ b/railway.toml
@@ -1,8 +1,17 @@
 [build]
-builder = "DOCKERFILE"
+builder = "NIXPACKS"
+cmdOverride = "npm install --production --no-optional --no-audit"
 
 [deploy]
 healthcheck_path = "/api/health"
 healthcheck = true
 restartPolicyType = "ON_FAILURE"
-startCommand = "node server/server.js"
+startCommand = "bash start.sh"
+
+[[nixpacks.plan.phases]]
+name = "setup"
+commands = ["mkdir -p dist", "chmod +x start.sh"]
+
+[[nixpacks.plan.phases]]
+name = "install"
+commands = ["npm install --production --no-optional --no-audit"]
