--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development tsx server/index.ts",
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
-    "start": "node server/server.js",
+    "start": "cross-env NODE_ENV=production node server/server.js",
     "check": "tsc",
-    "db:push": "drizzle-kit push"
+    "db:push": "drizzle-kit push",
+    "db:migrate": "cross-env NODE_ENV=production tsx scripts/db-push.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
