--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "start": "cross-env NODE_ENV=production node dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push",
-    "db:migrate": "node scripts/migrate-database.js"
+    "db:migrate": "node scripts/migrate-database.js",
+    "db:test-user": "node scripts/create-test-user.js",
+    "db:check": "node scripts/check-table-structure.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
