--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "db:push": "drizzle-kit push",
     "db:migrate": "node scripts/migrate-database.js",
     "db:test-user": "node scripts/create-test-user.js",
-    "db:check": "node scripts/check-table-structure.js"
+    "db:check": "node scripts/check-table-structure.js",
+    "db:test-railway": "node scripts/test-railway-connection.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
