Configuração Railway completa

--- a/railway.env.example
+++ b/railway.env.example
@@ -1,14 +1,48 @@
-# Configuração do Banco de Dados (Railway fornecerá automaticamente)
-DATABASE_URL=postgresql://username:password@hostname:port/database
+# ========================================
+# CONFIGURAÇÕES DE AMBIENTE PARA RAILWAY
+# ========================================
+# Configure estas variáveis no painel do Railway
 
-# Configuração do Servidor
+# Ambiente de execução
 NODE_ENV=production
-PORT=3000
-SESSION_SECRET=your-super-secret-session-key-here-minimum-32-characters
 
-# Configuração de Email
-EMAIL_USER=contato@meuagendamentopro.com.br
-EMAIL_PASSWORD=your-email-password
+# ========================================
+# BANCO DE DADOS
+# ========================================
+# O Railway fornecerá automaticamente a DATABASE_URL quando você conectar um PostgreSQL
+# DATABASE_URL=postgresql://user:password@host:port/database
 
-# Configurações opcionais
-CORS_ORIGIN=https://your-domain.railway.app 
+# ========================================
+# CONFIGURAÇÕES DO SERVIDOR
+# ========================================
+# O Railway define a PORT automaticamente
+# PORT=3000
+
+# URL da sua aplicação no Railway
+# APP_URL=https://seu-app.railway.app
+
+# ========================================
+# CONFIGURAÇÕES DE SEGURANÇA
+# ========================================
+# IMPORTANTE: Use uma chave secreta forte em produção!
+SESSION_SECRET=sua_chave_secreta_muito_segura_para_producao
+
+# ========================================
+# CONFIGURAÇÕES DE EMAIL (OPCIONAL)
+# ========================================
+# GMAIL_USER=seu.email@gmail.com
+# GMAIL_APP_PASSWORD=sua_senha_de_app_do_gmail
+
+# ========================================
+# CONFIGURAÇÕES DO WHATSAPP (OPCIONAL)
+# ========================================
+# WHATSAPP_API_URL=
+# WHATSAPP_API_TOKEN=
+
+# ========================================
+# CONFIGURAÇÕES DE PAGAMENTO (OPCIONAL)
+# ========================================
+# STRIPE_PUBLIC_KEY=pk_live_...
+# STRIPE_SECRET_KEY=sk_live_...
+# MERCADOPAGO_ACCESS_TOKEN=
+# MERCADOPAGO_PUBLIC_KEY= 
