--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,29 @@ dist
 server/public
 vite.config.ts.*
 *.tar.gz
+
+# Arquivos de ambiente
+.env
+.env.local
+.env.production
+
+# Arquivos de migração (contêm dados sensíveis)
+railway-migration.sql
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Arquivos temporários
+*.tmp
+*.temp
+
+# Arquivos de backup
+*.backup
+*.bak
+
+# Arquivos do sistema
+Thumbs.db
+.DS_Store
