--- a/package.json
+++ b/package.json
@@ -9,10 +9,8 @@
     "start": "cross-env NODE_ENV=production node dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push",
-    "db:migrate": "node scripts/migrate-database.js",
-    "db:test-user": "node scripts/create-test-user.js",
-    "db:check": "node scripts/check-table-structure.js",
-    "db:test-railway": "node scripts/test-railway-connection.js"
+    "export-db": "tsx scripts/export-db-for-railway.js",
+    "railway:prepare": "npm run export-db && npm run build"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
