--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "mercadopago": "^2.5.0",
     "multer": "^1.4.5-lts.2",
     "next-themes": "^0.4.6",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.3",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
